fix: ensure generic container does not overflow

--- a/src/views/GenericContainer/component.module.css
+++ b/src/views/GenericContainer/component.module.css
@@ -1,5 +1,6 @@
 .grid {
   display: grid;
+  grid-template-columns: minmax(0, 1fr);
   gap: 1rem;
   max-width: var(--jahia-width);
   margin-inline: auto;
